--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* LOG IN PART */
+/* LOGIN PASSWORD STYLE HTML SIDE */
 .loginBody {
     background-image:url("../img/shelter.jpg");
     background-repeat: no-repeat;
@@ -25,7 +25,7 @@
 }
 
 
-/*Bookshelter part (Profile Part)*/
+/*Bookshelter part (Profile Part) HTML SIDE*/
 
 
 .siteHeader__topHeader {
@@ -58,4 +58,60 @@
 .searchInput {
     border: none;
     background-color:aliceblue;
+}
+
+
+/*LOGIN JS PART  (JAVA SCRIPT SIDE)*/
+
+
+
+/*card body style*/
+.card {
+    display: flex;
+    align-items: center;
+}
+
+.cardImage {
+    background-color:rgb(248, 248, 255);
+    padding: 20px;
+    width: 201px;
+    height: 202px;
+}
+.booksTitle {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.booksAuthor {
+    margin: 0;
+    padding: 0;
+    color:grey;
+    font-size: small;
+    margin-top: 10px;
+}
+.booksYear {
+    margin: 0;
+    padding: 0;
+    color:grey;
+    font-size: small;
+}
+
+
+/*card button style*/
+
+.buttonWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.bookmarkBtn {
+    font-size: small;
+    font-weight: 700;
+}
+
+.moreInfoLink {
+    font-size: small;
+    font-weight: 700;
+    color:rgb(82, 82, 230);
 }
