--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+    position: relative;
+}
 /* LOGIN PASSWORD STYLE HTML SIDE */
 .loginBody {
     background-image:url("../img/shelter.jpg");
@@ -25,9 +28,10 @@
 }
 
 
+
 /*Bookshelter part (Profile Part) HTML SIDE*/
 
-
+/*SITE-HEADER PART*/
 .siteHeader__topHeader {
     display: flex;
     align-items: center;
@@ -58,6 +62,14 @@
 .searchInput {
     border: none;
     background-color:aliceblue;
+}
+
+/*SITE-MAIN*/
+
+/*SITE-RIGHT-PART*/
+
+.siteMain__rightPart {
+    background-color: aliceblue;
 }
 
 
@@ -114,4 +126,21 @@
     font-size: small;
     font-weight: 700;
     color:rgb(82, 82, 230);
+}
+
+
+
+/*OVERLAY STYLE*/
+.hidden{
+    display: none;
+}
+.overlay {
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.2;
+    z-index: 5;
 }
